--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -16,9 +16,10 @@
     <h1>Olá, Mundo!</h1> 
     <p>Já me livrei da maldição</p>
     <script>
-        window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual é seu nome?')
+         
+        window.alert('Minha primeira mensagem!') //alerta
+        window.confirm('Está gostando de JS?') // Janela com o botão ok e cancelar
+        window.prompt('Qual é seu nome?') //vai perguntar o nome
     </script>
 </body>
 </html>
